Update workflow file

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -29,8 +29,6 @@ jobs:
       - name: Upload to Deno Deploy
         uses: denoland/deployctl@v1
         with:
-          project: "fresh-project-45"
+          project: "interest-calculator"
           entrypoint: "main.ts"
           root: "."
-          
-          
